# tdms2root

./: .gitignore  CMakeLists.txt  README.md  convert.sh
.cache/clangd/index/: ParserWrapper.cpp.07445D25490E947E.idx  ParserWrapper.hpp.AAFC131AD3A1C1BC.idx  TdmsChannel.cpp.0FFDC99F04866A7C.idx  TdmsChannel.cpp.49652FF8673F7C25.idx  TdmsChannel.h.265FBD4DAD9E0FF9.idx  TdmsChannel.h.A0DB089CF7408B83.idx  TdmsGroup.cpp.AFB2BB5DB0E38D46.idx  TdmsGroup.cpp.D4C4E9297B8BEC0A.idx  TdmsGroup.h.2A6EBC49202F9328.idx  TdmsGroup.h.900098D3D1DB2F8D.idx  TdmsLeadIn.cpp.112489AB53197A13.idx  TdmsLeadIn.cpp.BAA7FA5C8FC7FD56.idx  TdmsLeadIn.h.495BE1F3DB11CD5E.idx  TdmsLeadIn.h.754349B3335AE5E7.idx  TdmsMetaData.cpp.2663DF2D07CAF33C.idx  TdmsMetaData.cpp.6119E4EA27538CB9.idx  TdmsMetaData.h.33B4E40828C643B7.idx  TdmsMetaData.h.ACF647E0D8973B75.idx  TdmsObject.cpp.44FAEB5E168386FC.idx  TdmsObject.cpp.D8F09F10CF6BB59A.idx  TdmsObject.h.35588F645570D6D1.idx  TdmsObject.h.BE8DC1992117EFFA.idx  TdmsParser.cpp.26BFBF6D9D3DB3C1.idx  TdmsParser.cpp.6BF03BB68C0845EC.idx  TdmsParser.h.8D0335EE79A996C2.idx  TdmsParser.h.CD3B5A4E3CD2687C.idx  TdmsSegment.cpp.2CCBCAA8F7C0D943.idx  TdmsSegment.cpp.F26A698A99B93418.idx  TdmsSegment.h.484F1EC26CDF4117.idx  TdmsSegment.h.B2F6EA76A17208AF.idx  endianfstream.hh.9A67254D2FDA7120.idx  endianfstream.hh.E8948135B9539502.idx  main.cpp.DE1D2076DCB6D6DF.idx
libtdms-gpl-0.5/tdmsreader/: Makefile  tdmsreader
scripts/: convert_util.sh
src/: ParserWrapper.cpp  ParserWrapper.hpp  _main.cpp_  main.cpp
src/tdmsReader/: TdmsChannel.cpp  TdmsChannel.h  TdmsLeadIn.cpp  TdmsMetaData.cpp  TdmsObject.cpp  TdmsParser.cpp
